--- a/PizzeriaAPI/PizzeriaAPI.csproj
+++ b/PizzeriaAPI/PizzeriaAPI.csproj
@@ -13,9 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\AccountService\AccountApi.csproj" />
+    <ProjectReference Include="..\Application\Pizzeria.Service.csproj" />
+    <ProjectReference Include="..\DataAccess\Pizzeria.DataAccess.csproj" />
+    <ProjectReference Include="..\Domain\Pizzeria.Domain.csproj" />
   </ItemGroup>
 
 </Project>
