--- a/Domain/Pizzeria.Domain.csproj
+++ b/Domain/Pizzeria.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AccountService\AccountApi.csproj" />
+  </ItemGroup>
+
 </Project>
