--- a/DataAccess/Pizzeria.DataAccess.csproj
+++ b/DataAccess/Pizzeria.DataAccess.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Domain\Pizzeria.Domain.csproj" />
   </ItemGroup>
 
 </Project>
