--- a/PizzeriaAPI/PizzeriaAPI.csproj
+++ b/PizzeriaAPI/PizzeriaAPI.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Domain\Pizzeria.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
