--- a/Application/Pizzeria.Service.csproj
+++ b/Application/Pizzeria.Service.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AccountService\AccountApi.csproj" />
     <ProjectReference Include="..\DataAccess\Pizzeria.DataAccess.csproj" />
     <ProjectReference Include="..\Domain\Pizzeria.Domain.csproj" />
   </ItemGroup>
