--- a/PizzeriaAPI/appsettings.json
+++ b/PizzeriaAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AllowOriging": "http://localhost:8080",
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY",
+    "JWTExpireDays": 15,
+    "JwtIssuer": "accountapi.pl"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
